--- a/main.css
+++ b/main.css
@@ -8,7 +8,8 @@ body {
     max-width: 800px;
     margin-left: auto;
     margin-right:auto;
-    font-family: sans-serif;
+    font-family: "Montserrat", sans-serif;
+    background-color: #70986a;
 }
 
 h1 {
