--- a/docs/main.css
+++ b/docs/main.css
@@ -9,7 +9,7 @@ body {
     margin-left: auto;
     margin-right:auto;
     font-family: "Montserrat", sans-serif;
-    background-color: #70986a;
+    background-color: #94B28F;
 }
 
 h1 {
