Fix some small issues

--- a/_includes/menu.liquid
+++ b/_includes/menu.liquid
@@ -6,7 +6,7 @@
     </h1>
 
     <button onclick="document.getElementById('menu').classList.toggle('open')">
-        <img src="menu.svg"alt="Menu">
+        <img src="images/menu.svg"alt="Menu">
     </button>
     <ul id="menu">
       <li
