--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -1,12 +1,13 @@
 <!doctype html>
 <meta charset=utf8>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link rel="stylesheet" href="main.css">
 <title>Wildberry Wood Outdoor Learning</title>
 {% include menu.liquid %} 
 <main>
-    <div id=head-image>
-        <h2>{{ page.title }}</h2>
-    </div>
-    {{ page.content }}
+  <div id=head-image>
+    <h2>{{ page.title }}</h2>
+  </div>
+  {{ page.content }}
 </main>
