--- a/docs/main.css
+++ b/docs/main.css
@@ -10,11 +10,24 @@ body {
     margin-right:auto;
     font-family: "Montserrat", sans-serif;
     background-color: #94B28F;
+    font-size: 20px;
 }
 
 h1 {
     margin: 0 0 0 0;
     margin-right: auto;
+}
+
+main {
+    padding-left: 1em;
+    padding-right: 1em;
+    background-color: white;
+    padding-bottom: 1em;
+}
+
+main > div#head-image {
+    margin-left: -1em;
+    margin-right: -1em;
 }
 
 nav {
@@ -117,4 +130,13 @@ nav > button {
     text-align: center;
     font-size: 48px;
     text-shadow: 0 1px 0 black;
+}
+
+dt {
+    font-weight: bold;
+    margin-bottom: 0.5em;
+}
+
+dd {
+    margin-bottom: 1em;
 }
