--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -6,7 +6,11 @@
 <title>Wildberry Wood Outdoor Learning</title>
 {% include menu.liquid %} 
 <main>
-  <div id=head-image>
+  <div id=head-image style="background-image: linear-gradient(to bottom,
+                                                rgba(32, 32, 0, 0),
+                                                rgba(32, 32, 0, 0.5)),
+                                              url({% if page.data.head-img %} {{page.data.head-img}} {% else %} images/img_6911.jpg {% endif %})"
+>
     <h2>{{ page.title }}</h2>
   </div>
   {{ page.content }}
