Change Little-Explorers to Drop-in Sessions in menu
Add a page listing all the drop-in sessions

--- a/_includes/menu.liquid
+++ b/_includes/menu.liquid
@@ -28,12 +28,12 @@
             </a>
         </li>
       <li
-        {% if page.categories contains "little-explorers" %}
+        {% if page.categories contains "sessions" %}
           class="current"
         {% endif %}
         >
-            <a href="little-explorers.html">
-                Little Explorers
+            <a href="sessions.html">
+                Drop-in Sessions
             </a>
         </li>
       <li
