--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -2,14 +2,14 @@
 <meta charset=utf8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="/main.css">
 <title>Wildberry Wood Outdoor Learning</title>
-{% include menu.liquid %} 
+{% include menu.liquid %}
 <main>
   <div id=head-image style="background-image: linear-gradient(to bottom,
                                                 rgba(32, 32, 0, 0),
                                                 rgba(32, 32, 0, 0.5)),
-                                              url({% if page.data.head-img %} {{page.data.head-img}} {% else %} images/img_6911.jpg {% endif %})"
+                                              url({% if page.data.head-img %} {{page.data.head-img}} {% else %} /images/img_6911.jpg {% endif %})"
 >
     <h2>{{ page.title }}</h2>
   </div>
