--- a/docs/main.css
+++ b/docs/main.css
@@ -140,10 +140,12 @@ dd {
     margin-bottom: 1em;
 }
 
-img {
+main img {
     float:left;
     margin:0.5em;
+    margin-left:0;
     margin-right: 2em;
+    max-width: 100%;
 }
 
 ol {
