--- a/_includes/menu.liquid
+++ b/_includes/menu.liquid
@@ -42,7 +42,7 @@
         {% endif %}
         >
             <a href="/sessions.html">
-                Drop-in Sessions
+                Sessions
             </a>
         </li>
       <li
